[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/menus/Outro.gd" type="Script" id=1]
[ext_resource path="res://src/effects/StackedSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/effects/SporeGenerator.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/particles/MushroomSpore.png" type="Texture" id=4]
[ext_resource path="res://sprites/particles/PurpleSpore.png" type="Texture" id=5]
[ext_resource path="res://sprites/particles/BlueSpore.png" type="Texture" id=6]
[ext_resource path="res://sprites/particles/PinkSpore.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://fonts/NESCyrillic.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="Outro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="SporeGenerator_3" parent="." instance=ExtResource( 3 )]
visible = false
rect = Rect2( 0, 0, 288, 208 )
desired_spores = 250
spore_textures = [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ) ]

[node name="SporeGenerator_2" parent="." instance=ExtResource( 3 )]
visible = false
rect = Rect2( 0, 0, 288, 208 )
desired_spores = 250
spore_textures = [ ExtResource( 4 ), ExtResource( 7 ) ]

[node name="SporeGenerator_1" parent="." instance=ExtResource( 3 )]
rect = Rect2( 0, 0, 288, 208 )
desired_spores = 250

[node name="StackedSprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 144, 113 )

[node name="Text" type="Label" parent="."]
anchor_right = 1.0
margin_top = 12.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "You found the single patty!"
align = 1
valign = 1

[node name="Time" type="Label" parent="."]
anchor_right = 1.0
margin_top = 31.0
margin_bottom = 43.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "10:30"
align = 1
valign = 1

[node name="Thanks" type="Label" parent="."]
anchor_right = 1.0
margin_top = 151.0
margin_bottom = 163.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Thanks for playing!"
align = 1
valign = 1

[node name="Credits" type="Label" parent="."]
anchor_right = 1.0
margin_top = 171.0
margin_bottom = 198.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Game by Jon Topielski, Alphons6,
01010111, and Bubby Darkstar"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
